<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f7f7f7"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tcnr18.com.m10318test.M1440test" >

    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/lbl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/spinner1"
        android:layout_below="@+id/spinner1"
        android:layout_marginTop="17dp"
        android:text="@string/lbl1"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl1"
        android:layout_alignBottom="@+id/lbl1"
        android:layout_toRightOf="@+id/lbl1"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl1"
        android:layout_below="@+id/lbl1"
        android:text="@string/lbl2"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl2"
        android:layout_alignBottom="@+id/lbl2"
        android:layout_alignLeft="@+id/txt1"
          android:layout_toRightOf="@+id/lbl2"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl2"
        android:layout_below="@+id/lbl2"
        android:text="@string/lbl3"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl3"
        android:layout_alignBottom="@+id/lbl3"
        android:layout_alignRight="@+id/txt2"
          android:layout_toRightOf="@+id/lbl3"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl3"
        android:layout_below="@+id/lbl3"
        android:text="@string/lbl4"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl4"
        android:layout_alignBottom="@+id/lbl4"
        android:layout_alignRight="@+id/txt3"
          android:layout_toRightOf="@+id/lbl4"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl4"
        android:layout_below="@+id/lbl4"
        android:text="@string/lbl5"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl5"
        android:layout_alignBottom="@+id/lbl5"
          android:layout_toRightOf="@+id/lbl5"
        android:layout_alignRight="@+id/txt4"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl5"
        android:layout_below="@+id/lbl5"
        android:text="@string/lbl6"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl6"
        android:layout_alignBottom="@+id/lbl6"
        android:layout_alignRight="@+id/txt5"
          android:layout_toRightOf="@+id/lbl6"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/lbl6"
        android:layout_below="@+id/lbl6"
        android:text="@string/lbl7"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt6"
        android:layout_below="@+id/txt6"
          android:layout_toRightOf="@+id/lbl7"
        android:text="TextView"
        android:width="@dimen/txtdp" />

    <TextView
        android:id="@+id/lbl8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/lbl7"
        android:layout_below="@+id/lbl7"
        android:text="@string/lbl8"
        android:width="@dimen/lbldp" />

    <TextView
        android:id="@+id/txt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/lbl8"
        android:layout_alignBottom="@+id/lbl8"
        android:layout_alignRight="@+id/txt7"
          android:layout_toRightOf="@+id/lbl8"
        android:text="TextView"
        android:width="@dimen/txtdp" />

</RelativeLayout>